# marex_sim

./: .gitignore  CMakeLists.txt  README.md
config/: artieII_ntof_ideal_long.yaml  artieII_ntof_ideal_short.yaml  ear1_example.yml
data/: Counts_TOF_3p3_natAr.root  E4R5867_e4.txt  Neutron_Gamma_Flux_1cmColli_188m.root  Profile_188m.root  Winters_data.csv  endf_ar.csv  endf_ar36.csv  endf_ar38.csv  endf_ar40.csv  endf_natar.csv  evalflux.root  gausProfile.root
include/: Core.hh
include/actions/: ActionInitialization.hh  ArtieIIActionInitialization.hh  EventAction.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackingAction.hh
include/analysis/: Analysis.hh  EnergyDeposit.hh  Hit.hh  Neutron.hh  OpticalPhotonData.hh  Particle.hh  Profile.hh  ThermalElectronData.hh  Trajectory.hh  bkgdAnalysis.hh  voxelAnalysis.hh
include/detector/: DetectorConstruction.hh  EAR1.hh  EAR2.hh  Filters.hh  LiG.hh  LiGDetector.hh  MArEXTarget.hh  SensitiveDetector.hh  SimpleDetector.hh  Target.hh  nTOF.hh
include/detector/ArtieI/: ArtieIDetectorConstruction.hh
include/detector/ArtieII_v1/: ArtieIIDetectorConstruction.hh
include/detector/ArtieII_v1/ArtieIITarget/: MArEXTarget.hh  Target.hh
include/detector/ArtieII_v1/DICER/: DICER.hh
include/detector/ArtieII_v1/Detector/: DICERDetector.hh  LiGDetector.hh  SimpleDetector.hh
include/detector/ArtieII_v1/Filters/: Filters.hh
include/detector/ArtieII_v1/nTOF/: nTOF.hh
include/generator/: ArtieIIPrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh
include/manager/: EventManager.hh
include/materials/: Argon.hh  Material.hh
include/physics/: NeutronHPPhysics.hh  PhysicsList.hh  ScintillationPhysics.hh  ScintillationProcess.hh  ThermalElectron.hh
macros/: vis.mac
scripts/: install_endf.sh  install_geant4.sh  install_git_lfs.sh
src/: Core.cxx
src/actions/: ActionInitialization.cxx  EventAction.cxx  RunAction.cxx  StackingAction.cxx  SteppingAction.cxx  TrackingAction.cxx
src/analysis/: Analysis.cxx  Particle.cxx  Trajectory.cxx  bkgdAnalysis.cxx  voxelAnalysis.cxx
src/detector/: ArtieIIDetectorConstruction.cxx  ArtieIITarget.cxx  DetectorConstruction.cxx  EAR1.cxx  Filters.cxx  LiGDetector.cxx  MArEXTarget.cxx  SimpleDetector.cxx  Target.cxx  nTOF.cxx
src/generator/: MArEXPrimaryGeneratorAction.cxx  PrimaryGeneratorAction.cxx
src/manager/: EventManager.cxx
src/materials/: Argon.cxx  Material.cxx
src/physics/: NeutronHPPhysics.cxx  PhysicsList.cxx  ScintillationPhysics.cxx  ScintillationProcess.cxx  ThermalElectron.cxx
src/programs/: MArEX.cc  marex.cc
